Bug #182726.  GTK 2.1 breaks gtk2xtbin.  Make sure to add the xtbin window to the socket.  Not part of the default build.